# llenc

./: CMakeLists.txt  CameraStreamer.cpp  CameraStreamer.h  Encoder.cpp  Encoder.h  llenc.cpp
GRID-2.2/: NvIFROpenGL.h  NvIFR_API.h
GRID-2.3/: NvIFR.h  NvIFRToSys.h  NvIFR_API.h
NvIFR/: NvIFRH264.h  NvIFROpenGL.h
NvIFR/x86/: NvIFROpenGL.lib
examples/: helloEncoder.cpp  helloEncoder.cpp~
